# schoolsha

./: .gitignore  AGENTS.md  LICENSE  LICENSE-ASSETS  README.md  README.zh.md  auth.ts  cards.json  cards.ts  characters.json  cli.ts  deno.json  effects.ts  elo.ts  events.ts  game.ts  integration_test.py  integration_test2.py  main.ts  matchmaking.ts  quick_test.py  room.ts  skills.json  skills.ts  test_core.ts  test_equip.ts  test_integration.ts  types.ts  ws_full_test.py
docs/: CARDS.md  CHARACTERS.md  PKCE_FLOW.md
rust-backend/: Cargo.toml  README.md  characters.json  skills.json
rust-backend/src/: auth.rs  cards.rs  config.rs  effects.rs  elo.rs  events.rs  game.rs  lib.rs  main.rs  matchmaking.rs  room.rs  skills.rs  types.rs
rust-backend/tests/: unit_tests.rs
rust-backend/web/: index.html
rust-backend/web/src/: actions.ts  anim.ts  const.ts  overlay.ts
server/: cards.json  cli.ts  effects.ts  events.ts  game.ts  main.ts  skills.json  skills.ts  types.ts
web/: app.js  index.html  package-lock.json  package.json  style.css
web/src/: actions.ts  anim.ts  auth.ts  const.ts  main.ts  overlay.ts  store.ts  timers.ts  ws.ts
