[package]
name = "schoolsha"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
